<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultadoIMC">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:title="@string/app_name"
        app:theme="@style/Theme.AppCompat.DayNight"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/resultIMC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$imc"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.224" />

    <TextView
        android:id="@+id/value_imc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:text="@string/value_imc"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.672" />

    <TextView
        android:id="@+id/value_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/value_1"
        android:textSize="24sp"
        android:background="@color/teal_700"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/value_imc" />
    <TextView
        android:id="@+id/value_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/value_2"
        android:textSize="24sp"
        android:background="@color/green"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/value_1" />
    <TextView
        android:id="@+id/value_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/value_3"
        android:textSize="24sp"
        android:background="@color/yellowweak"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/value_2" />
    <TextView
        android:id="@+id/value_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/value_4"
        android:textSize="24sp"
        android:background="@color/orange"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/value_3" />
    <TextView
        android:id="@+id/value_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/value_5"
        android:textSize="24sp"
        android:background="@color/red"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/value_4" />
    <TextView
        android:id="@+id/value_6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/value_6"
        android:textSize="24sp"
        android:background="@color/darkpurple"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/value_5" />

    <TextView
        android:id="@+id/class_imc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/class_imc"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.393"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.672" />

    <TextView
        android:id="@+id/class_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/class_1"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/class_imc"
         />
    <TextView
        android:id="@+id/class_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/class_2"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/class_1"
        />
    <TextView
        android:id="@+id/class_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/class_3"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/class_2"
        />
    <TextView
        android:id="@+id/class_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/class_4"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/class_3"
        />
    <TextView
        android:id="@+id/class_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/class_5"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/class_4"
        />
    <TextView
        android:id="@+id/class_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/class_6"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/class_5"
        />



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="vertical" />


</androidx.constraintlayout.widget.ConstraintLayout>